create category component

--- a/src/app/admin/setting/setting.component.html
+++ b/src/app/admin/setting/setting.component.html
@@ -10,6 +10,7 @@
       </mat-panel-description>
       
     </mat-expansion-panel-header>
+    <!-- category component -->
     <app-category></app-category>
   </mat-expansion-panel>
 
