--- a/src/app/admin/setting/category/category-action/category-action.component.html
+++ b/src/app/admin/setting/category/category-action/category-action.component.html
@@ -1,15 +1,43 @@
-<div mat-dialog-content>
-  <mat-form-field appearance="outline">
-    <mat-label>Name</mat-label>
-    <input matInput placeholder="Name">
-  </mat-form-field>
-  <mat-form-field appearance="outline">
-    <mat-label>Description</mat-label>
-    <input matInput placeholder="Description">
-  </mat-form-field>
-
-</div>
-<div mat-dialog-actions>
-  <button mat-button (click)="onNoClick()">No Thanks</button>
-  <button mat-button [mat-dialog-close]="data.animal" cdkFocusInitial>Ok</button>
+<div class="form_start">
+  <form action="#">
+    <div class="inputField">
+      <label for="first_name">First Name</label>
+      <input
+        type="text"
+        id="first_name"
+        name="first_name"
+        placeholder="Enter first name"
+      />
+    </div>
+    <div class="inputField">
+      <label for="Last_Name">Last Name</label>
+      <input type="text" placeholder="Enter last name" />
+    </div>
+    <div class="inputField">
+      <label for="description">Description</label>
+      <textarea
+        name="description"
+        id="Message"
+        rows="4"
+        placeholder="Enter description"
+      ></textarea>
+    </div>
+    <div class="inputField">
+      <label for="add_file"
+        >Add File/Image File format:<span class="file_Format">
+          jpg png jpeg or pdf</span
+        ></label
+      >
+      <div class="file_div">
+        <span>choose File/Image</span>
+        <input
+          type="file"
+          title="add image"
+          placeholder="Add file"
+          accept="image/png, image/jpg image/jpeg file/pdf"
+        />
+      </div>
+    </div>
+    <button type="button">Submit</button>
+  </form>
 </div>
