--- a/src/app/admin/setting/category/category-action/category-action.component.html
+++ b/src/app/admin/setting/category/category-action/category-action.component.html
@@ -1,43 +1,47 @@
 <div class="form_start">
-  <form action="#">
-    <div class="inputField">
-      <label for="first_name">First Name</label>
-      <input
-        type="text"
-        id="first_name"
-        name="first_name"
-        placeholder="Enter first name"
-      />
-    </div>
-    <div class="inputField">
-      <label for="Last_Name">Last Name</label>
-      <input type="text" placeholder="Enter last name" />
-    </div>
-    <div class="inputField">
-      <label for="description">Description</label>
-      <textarea
-        name="description"
-        id="Message"
-        rows="4"
-        placeholder="Enter description"
-      ></textarea>
-    </div>
-    <div class="inputField">
-      <label for="add_file"
-        >Add File/Image File format:<span class="file_Format">
-          jpg png jpeg or pdf</span
-        ></label
-      >
-      <div class="file_div">
-        <span>choose File/Image</span>
-        <input
-          type="file"
-          title="add image"
-          placeholder="Add file"
-          accept="image/png, image/jpg image/jpeg file/pdf"
-        />
+  <form>
+    <div class="row">
+
+      <div class="col-md-6">
+        <label>Category</label>
+        <input type="radio" value="category" name="category" (click)="categoryOrSubCategory('Category')">
+      </div>
+
+      <div class="col-md-6">
+        <label>SubCategory</label>
+        <input type="radio" value="SubCategory" name="category" (click)="categoryOrSubCategory('SubCategory')">
       </div>
     </div>
-    <button type="button">Submit</button>
+
+    <div class="inputField" *ngIf="type=='SubCategory'">
+      <label for="Category">Category</label>
+      <select class="form-control" [(ngModel)]="categoryDto.parentId">
+        <option value="null" [disabled]="true">select</option>
+        <option *ngFor="let category of categoryList" value="category.value">{{category.label}}</option>
+      </select>
+    </div>
+
+    <div class="inputField">
+      <label for="first_name">{{type}}</label>
+      <input type="text" id="name" name="name" placeholder="Enter name" [(ngModel)]="categoryDto.name" required />
+    </div>
+
+    <div class="inputField">
+      <label for="description">Description</label>
+      <textarea name="description" id="Message" rows="4" placeholder="Enter description"
+        [(ngModel)]="categoryDto.description"></textarea>
+    </div>
+
+    <div class="inputField">
+      <label for="add_file">Add File/Image File format:<span class="file_Format">
+          jpg png jpeg or pdf</span></label>
+      <div class="file_div">
+        <span> <img [src]="imgURL" alt="productCategory" style="width: 100%;"></span>
+        <input type="file" title="add image" placeholder="Add file" (change)="addFile($event)"
+          accept="image/png, image/jpg image/jpeg file/pdf" />
+      </div>
+    </div>
+
+    <button type="submit" (click)="save()">Submit</button>
   </form>
 </div>
