--- a/src/app/admin/setting/setting.component.html
+++ b/src/app/admin/setting/setting.component.html
@@ -18,8 +18,9 @@
         </button>
       </h2>
       <div id="flush-collapseTwo" class="accordion-collapse collapse" aria-labelledby="flush-headingTwo" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body">Placeholder content for this accordion, which is intended to demonstrate the <code>.accordion-flush</code> class. This is the second item's accordion body. Let's imagine this being filled with some actual content.</div>
-      </div>
+        <div class="accordion-body">
+          <app-sub-category></app-sub-category>
+        </div>
     </div>
     <div class="accordion-item">
       <h2 class="accordion-header" id="flush-headingThree">
