--- a/src/app/admin/setting/category/category-action/category-action.component.html
+++ b/src/app/admin/setting/category/category-action/category-action.component.html
@@ -15,7 +15,7 @@
       <label for="add_file">Add File/Image File format:<span class="file_Format">
           jpg png jpeg or pdf</span></label>
       <div class="file_div">
-        <span> <img [src]="imgURL" alt="productCategory" style="width: 100%;"></span>
+        <img [src]="imgURL" alt="productCategory" style="width: 100%;" class="img_preview">
         <input type="file" title="add image" placeholder="Add file" (change)="addFile($event)"
           accept="image/png, image/jpg image/jpeg file/pdf" />
       </div>
