--- a/src/app/admin/setting/category/category-action/category-action.component.css
+++ b/src/app/admin/setting/category/category-action/category-action.component.css
@@ -1,4 +1,8 @@
-
+:root{
+    --temp-color--:#2ed8b6;
+    --temp-color-d--:#66C976;
+    
+}
 .inputField{
     display: flex;
     flex-direction: column;
@@ -11,8 +15,7 @@ input,
 textarea{
     padding: 8px 10px;
     margin-bottom: 10px;
-    border: 1px solid #adadad;
-    border-radius: 3px;
+    border: 1px solid #e2e2e2;
 }
 input[type=file]{
     cursor: pointer;
@@ -23,7 +26,7 @@ input[type=file]{
 }
 .file_div{
     height: 300px;
-    border: 1px solid #adadad;
+    /* border: 1px solid #adadad; */
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,6 +36,14 @@ input[type=file]{
 .img_preview{
     position: absolute;
     height: 300px;
+    width: 400px;
+    border: 1px solid #e2e2e2;
+    text-align: center;
+    color: red;
+    font-size: 1rem;
+    font-weight: 500;
+    cursor: pointer;
+    padding-top: 5px;
 }
 .file_div span{
     position: absolute;
@@ -44,19 +55,23 @@ input:focus-visible,
 textarea:focus-visible{
     outline: none;
 }
-button{
+.form_btn{
+    text-align: center;
+}
+.form_btn button{
     margin-top: 13px;
-    width: 100%;
-    border: 1px solid gray;
-    padding: 5px;
-    background-color: #626262;
+    border: 1px solid #e2e2e2;
+    padding: 10px 30px;
+    background-color:#26a33a !important;
     color: white;
     transition: all ease-in-out 0.4s;
 }
-button:hover{
-    background-color: white;
-    color: black;
-}
 .file_Format{
-    color: #626262;
+    color: red;
+}
+.form_start{
+    padding: 20px;
+}
+.title h2{
+    font-size: 25px;    
 }
