--- a/src/app/admin/setting/category/category.component.html
+++ b/src/app/admin/setting/category/category.component.html
@@ -1,5 +1,14 @@
 <div class="row">
-    <div class="offset-10 col-md-2">
+    <div class="col-md-2">
+        <button  class="btn btn-primary" (click)="addEditcategory()">Add Category</button>
+    </div>
+    <div class="col-md-2">
+        <button  class="btn btn-primary" (click)="addEditcategory()">Add Category</button>
+    </div>
+    <div class="col-md-2">
+        <button  class="btn btn-primary" (click)="addEditcategory()">Add Category</button>
+    </div>
+    <div class="col-md-2">
         <button  class="btn btn-primary" (click)="addEditcategory()">Add Category</button>
     </div>
 </div>
