--- a/src/app/admin/vehicle-detail/vehicle-detail-action/vehicle-detail-action.component.html
+++ b/src/app/admin/vehicle-detail/vehicle-detail-action/vehicle-detail-action.component.html
@@ -1,146 +1,275 @@
-<div class="vehicle_type_form_start">
-    <div class="row">
-        <div class="col-12">
-            <div class="vehilce_action_form_title mt-4">
-                <h3>Add Vehicle Type of Taxi Ride</h3>
-                <div class="line-break"></div>
-            </div>
+
+<div class="form_main_container">
+    <div class="form_container_title_icon d-flex align-items-center mb-5">
+        <span class="icon">
+            <i class="bi bi-pencil-square"></i>
+        </span>
+        <div class="form_container_title_content">
+            <h3 class="mb-0">Vehicle Type</h3>
+            <span>Add Vehicle Type Of Taxi Ride</span>
         </div>
-        <div class="col-4">
-            <div class="vehicle mt-4">
-                Vehicle Type Name:<span>*</span> 
+    </div>
+    <div class="vehicle_type_form_start">
+        <div class="row">
+            <div class="col-12">
+                <div class="vehilce_action_form_title mt-4">
+                    <h3>Add Vehicle Type of Taxi Ride</h3>
+                    <div class="line-break"></div>
+                </div>
             </div>
-        </div>
-        <div class="col-8">
-            <div class="vehicle_form_input mt-4">
-                <input type="text" name="vehicle-type" id="vehicle-type" placeholder="Unique vehicle type name">
+            <div class="col-4">
+                <div class="vehicle mt-4">
+                    Vehicle Type Name:<span>*</span> 
+                </div>
             </div>
-        </div>
-        <div class="col-4">
-            <div class="vehicle mt-4">
-                Vehicle Type Image:<span>*</span> 
+            <div class="col-8">
+                <div class="vehicle_form_input mt-4">
+                    <input type="text" name="vehicle-type" id="vehicle-type" placeholder="Unique vehicle type name">
+                </div>
             </div>
-        </div>
-        <div class="col-8">
-            <div class="vehicle_form_input mt-4">
-                <input type="file" name="vehicle-file" id="vehicle-file">
-                <p class="pt-2">[Note: Upload only png icon dimension between 50*50 to 100*100 & max size 100kb.]</p>
+            <div class="col-4">
+                <div class="vehicle mt-4">
+                    Vehicle Type Image:<span>*</span> 
+                </div>
             </div>
-        </div>
-        <div class="col-4">
-            <div class="vehicle mt-4">
-                Cost For Km:<span>*</span> 
+            <div class="col-8">
+                <div class="vehicle_form_input mt-4">
+                    <input type="file" name="vehicle-file" id="vehicle-file">
+                    <p class="pt-2">[Note: Upload only png icon dimension between 50*50 to 100*100 & max size 100kb.]</p>
+                </div>
             </div>
-        </div>
-        <div class="col-8">
-            <div class="vehicle_form_input mt-4">
-                <input type="number" placeholder="0" name="vehicle-cost-by-km" id="vehicle-cost-by-km">
+            <div class="col-4">
+                <div class="vehicle mt-4">
+                    Cost For Km:<span>*</span> 
+                </div>
             </div>
-        </div>
-        <div class="col-4">
-            <div class="vehicle mt-4">
-                Time Fare(per min):<span>*</span> 
+            <div class="col-8">
+                <div class="vehicle_form_input mt-4">
+                    <input type="number" placeholder="0" name="vehicle-cost-by-km" id="vehicle-cost-by-km">
+                </div>
             </div>
-        </div>
-        <div class="col-8">
-            <div class="vehicle_form_input mt-4">
-                <input type="number" name="Time-Fare-per-min" id="Time-Fare-per-min" placeholder="Time Fare per min">
+            <div class="col-4">
+                <div class="vehicle mt-4">
+                    Time Fare(per min):<span>*</span> 
+                </div>
             </div>
-        </div>
-        <div class="col-4">
-            <div class="vehicle mt-4">
-                Vehicle Type Name:<span>*</span> 
+            <div class="col-8">
+                <div class="vehicle_form_input mt-4">
+                    <input type="number" name="Time-Fare-per-min" id="Time-Fare-per-min" placeholder="Time Fare per min">
+                </div>
             </div>
-        </div>
-        <div class="col-8">
-            <div class="vehicle_form_input mt-4">
-                <input type="text" name="vehicle-type" id="vehicle-type" placeholder="Unique vehicle type name">
+            <div class="col-4">
+                <div class="vehicle mt-4">
+                    Vehicle Type Name:<span>*</span> 
+                </div>
             </div>
-        </div>
-        <div class="col-4">
-            <div class="vehicle mt-4">
-                Base Fare:<span>*</span> 
+            <div class="col-8">
+                <div class="vehicle_form_input mt-4">
+                    <input type="text" name="vehicle-type" id="vehicle-type" placeholder="Unique vehicle type name">
+                </div>
             </div>
-        </div>
-        <div class="col-8">
-            <div class="vehicle_form_input mt-4">
-                <input type="number" name="base-fare" id="base-fare" placeholder="Base Fare">
+            <div class="col-4">
+                <div class="vehicle mt-4">
+                    Base Fare:<span>*</span> 
+                </div>
             </div>
-        </div>
-        <div class="col-4">
-            <div class="vehicle mt-4">
-                Min Fare Amount:<span>*</span> 
+            <div class="col-8">
+                <div class="vehicle_form_input mt-4">
+                    <input type="number" name="base-fare" id="base-fare" placeholder="Base Fare">
+                </div>
             </div>
-        </div>
-        <div class="col-8">
-            <div class="vehicle_form_input mt-4">
-                <input type="number" name="Min-Fare-Amount" id="Min-Fare-Amount" placeholder="Min Fare Amount">
+            <div class="col-4">
+                <div class="vehicle mt-4">
+                    Min Fare Amount:<span>*</span> 
+                </div>
             </div>
-        </div>
-        <div class="col-4">
-            <div class="vehicle mt-4">
-                Rental Cost For KM :
+            <div class="col-8">
+                <div class="vehicle_form_input mt-4">
+                    <input type="number" name="Min-Fare-Amount" id="Min-Fare-Amount" placeholder="Min Fare Amount">
+                </div>
             </div>
-        </div>
-        <div class="col-8">
-            <div class="vehicle_form_input mt-4">
-                <input type="number" name="rental-cost-for-km" id="rental-cost-for-km" placeholder="Rental Cost For KM">
+            <div class="col-4">
+                <div class="vehicle mt-4">
+                    Rental Cost For KM :
+                </div>
             </div>
-        </div>
-        <div class="col-4">
-            <div class="vehicle mt-4">
-                Rental Amount For 1 Hour :
+            <div class="col-8">
+                <div class="vehicle_form_input mt-4">
+                    <input type="number" name="rental-cost-for-km" id="rental-cost-for-km" placeholder="Rental Cost For KM">
+                </div>
             </div>
-        </div>
-        <div class="col-8">
-            <div class="vehicle_form_input mt-4">
-                <input type="number" name="rental-amount-for-hour" id="rental-amount-for-hour" placeholder="Rental Amount For 1 Hour :">
+            <div class="col-4">
+                <div class="vehicle mt-4">
+                    Rental Amount For 1 Hour :
+                </div>
             </div>
-        </div>
-        <div class="col-4">
-            <div class="vehicle mt-4">
-                Rental Km Limit For 1 Hour :
+            <div class="col-8">
+                <div class="vehicle_form_input mt-4">
+                    <input type="number" name="rental-amount-for-hour" id="rental-amount-for-hour" placeholder="Rental Amount For 1 Hour :">
+                </div>
             </div>
-        </div>
-        <div class="col-8">
-            <div class="vehicle_form_input mt-4">
-                <input type="number" name="rental-km-limit-for-hour" id="rental-km-limit-for-hour" placeholder="Rental Km Limit For 1 Hour :">
+            <div class="col-4">
+                <div class="vehicle mt-4">
+                    Rental Km Limit For 1 Hour :
+                </div>
             </div>
-        </div>
-        <div class="col-4">
-            <div class="vehicle mt-4">
-                Surcharge Time Status:
+            <div class="col-8">
+                <div class="vehicle_form_input mt-4">
+                    <input type="number" name="rental-km-limit-for-hour" id="rental-km-limit-for-hour" placeholder="Rental Km Limit For 1 Hour :">
+                </div>
             </div>
-        </div>
-        <div class="col-8">
-            <div class="vehicle_form_input mt-4">
-                <input type="checkbox" name="surcharge-time-status" id="surcharge-time-status">
+            <div class="col-4">
+                <div class="vehicle mt-4">
+                    Surcharge Time Status:
+                </div>
             </div>
-        </div>
-        <div class="col-4">
-            <div class="vehicle mt-4">
-                Surcharge Time: <span>*</span>
+            <div class="col-8">
+                <div class="vehicle_form_input mt-4">
+                    <input type="checkbox" name="surcharge-time-status" id="surcharge-time-status">
+                </div>
             </div>
-        </div>
-        <div class="col-8">
-            <div class="vehicle_form_input mt-4">
-                <input type="checkbox" name="surcharge-time" id="surcharge-time" placeholder="EVERYDAY">
-                <span class="ps-1">EveryDay</span>
-                <input type="time">
+            <div class="col-4">
+                <div class="vehicle mt-4">
+                    Surcharge Time: <span>*</span>
+                </div>
             </div>
-        </div>
-        <div class="col-4">
-            <div class="vehicle mt-4">
-                Status:
+            <div class="col-8">
+                <div class="vehicle_form_input mt-4">
+                    <div class="row pb-3">
+                        <div class="col-2">
+                            <input type="checkbox" name="surcharge-time" id="surcharge-time">
+                            <span class="ps-2">EveryDay</span>
+                        </div>
+                        <div class="col-2">
+                            <input type="time">
+                        </div>
+                        <div class="col-2">
+                            <input type="time">
+                        </div>
+                        <div class="col-3">
+                            <input type="number" placeholder="Delivery char">
+                        </div>
+                    </div>
+                    <div class="row pb-3">
+                        <div class="col-2">
+                            <input type="checkbox" name="surcharge-time" id="surcharge-time">
+                            <span class="ps-2">Sun</span>
+                        </div>
+                        <div class="col-2">
+                            <input type="time">
+                        </div>
+                        <div class="col-2">
+                            <input type="time">
+                        </div>
+                        <div class="col-3">
+                            <input type="number" placeholder="Delivery char">
+                        </div>
+                    </div>
+                    <div class="row pb-3">
+                        <div class="col-2">
+                            <input type="checkbox" name="surcharge-time" id="surcharge-time">
+                            <span class="ps-2">Mon</span>
+                        </div>
+                        <div class="col-2">
+                            <input type="time">
+                        </div>
+                        <div class="col-2">
+                            <input type="time">
+                        </div>
+                        <div class="col-3">
+                            <input type="number" placeholder="Delivery char">
+                        </div>
+                    </div>
+                    <div class="row pb-3">
+                        <div class="col-2">
+                            <input type="checkbox" name="surcharge-time" id="surcharge-time">
+                            <span class="ps-2">Tue</span>
+                        </div>
+                        <div class="col-2">
+                            <input type="time">
+                        </div>
+                        <div class="col-2">
+                            <input type="time">
+                        </div>
+                        <div class="col-3">
+                            <input type="number" placeholder="Delivery char">
+                        </div>
+                    </div>
+                    <div class="row pb-3">
+                        <div class="col-2">
+                            <input type="checkbox" name="surcharge-time" id="surcharge-time">
+                            <span class="ps-2">Wed</span>
+                        </div>
+                        <div class="col-2">
+                            <input type="time">
+                        </div>
+                        <div class="col-2">
+                            <input type="time">
+                        </div>
+                        <div class="col-3">
+                            <input type="number" placeholder="Delivery char">
+                        </div>
+                    </div>
+                    <div class="row pb-3">
+                        <div class="col-2">
+                            <input type="checkbox" name="surcharge-time" id="surcharge-time">
+                            <span class="ps-2">Thu</span>
+                        </div>
+                        <div class="col-2">
+                            <input type="time">
+                        </div>
+                        <div class="col-2">
+                            <input type="time">
+                        </div>
+                        <div class="col-3">
+                            <input type="number" placeholder="Delivery char">
+                        </div>
+                    </div>
+                    <div class="row pb-3">
+                        <div class="col-2">
+                            <input type="checkbox" name="surcharge-time" id="surcharge-time">
+                            <span class="ps-2">Fri</span>
+                        </div>
+                        <div class="col-2">
+                            <input type="time">
+                        </div>
+                        <div class="col-2">
+                            <input type="time">
+                        </div>
+                        <div class="col-3">
+                            <input type="number" placeholder="Delivery char">
+                        </div>
+                    </div>
+                    <div class="row pb-3">
+                        <div class="col-2">
+                            <input type="checkbox" name="surcharge-time" id="surcharge-time">
+                            <span class="ps-2">Sat</span>
+                        </div>
+                        <div class="col-2">
+                            <input type="time">
+                        </div>
+                        <div class="col-2">
+                            <input type="time">
+                        </div>
+                        <div class="col-3">
+                            <input type="number" placeholder="Delivery char">
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="col-8">
-            <div class="vehicle_form_input mt-4">
-                <div class="select_dropdown">
-                    <select name="status" id="status">
-                        <option value="0">Deactive</option>
-                        <option value="1">Active</option>
-                    </select>
+            <div class="col-4">
+                <div class="vehicle mt-4">
+                    Status:
+                </div>
+            </div>
+            <div class="col-8">
+                <div class="vehicle_form_input mt-4">
+                    <div class="select_dropdown">
+                        <select name="status" id="status">
+                            <option value="0">Deactive</option>
+                            <option value="1">Active</option>
+                        </select>
+                    </div>
                 </div>
             </div>
         </div>
