--- a/src/app/admin/setting/setting.component.html
+++ b/src/app/admin/setting/setting.component.html
@@ -29,7 +29,7 @@
         </button>
       </h2>
       <div id="flush-collapseThree" class="accordion-collapse collapse" aria-labelledby="flush-headingThree" data-bs-parent="#accordionFlushExample">
-        <div class="accordion-body"> 
+        <div class="accordion-body p-0"> 
         <app-vehicle-detail-action></app-vehicle-detail-action>  
         </div>
       </div>
